css/spni.css
/* ... */
#player-tags-modal.male .player-tag-select.female,
#player-tags-modal.male .player-tag-select option.female {
    display: none;
}

#player-tags-modal.female .player-tag-select.male,
#player-tags-modal.female .player-tag-select option.male {
    display: none;
}

.player-tag-select {
    display: flex;
    width: 75%;
    justify-content: space-between;
    font-size: 1.4rem;
    margin: 0 auto;
    padding: 1rem 0;
    border-bottom: 0.1rem solid #666;
}

.player-tag-select:last-child {
    border: none;
}

.player-tag-select input,
.player-tag-select select {
    max-width: 50%;
}

.player-tag-select>.colorAndLabel {
    display: flex;
    justify-content: flex-end;
    max-width: 50%;
}

.player-tag-select>.colorAndLabel.range {
    max-width: 80%;
}

.player-tag-select input[disabled] {
    background: none;
    border: none;
}

.player-tag-select>.colorAndLabel.range input[disabled] {
    /*width: 25%;*/
    min-width: 7.5rem;
}

.player-tag-select input[type=range] {
    -webkit-appearance: none;
    /*margin: 0.5rem 0;*/
    margin: 2% 0;
    padding: 0;
    max-width: 100%;
}

.player-tag-select input[type=range]::-webkit-slider-runnable-track {
    -webkit-appearance: none;
    background: linear-gradient(90deg, white, #f1c6a3, #c08e66, #230800);
    width: 100%;
    height: 100%;
}

.player-tag-select input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 0.8rem;
    height: calc(100% + 1rem);
    margin: -0.5rem 0;
    box-shadow: 0 0 0 0.2rem black;
}

.player-tag-select input[type=range]::-ms-track {
    background: linear-gradient(90deg, white, #f1c6a3, #c08e66, #230800);
}

.player-tag-select input[type=range]::-ms-thumb {
    margin: 0;
    padding: 60% 0;
    border: 0.2rem solid black;
    box-shadow: none;
}

.player-tag-select input[type=range]::-moz-range-track {
    background: linear-gradient(90deg, white, #f1c6a3, #c08e66, #230800);
    height: 50%;
}

.player-tag-select input[type=range]::-moz-range-thumb {
    border: 0.2rem solid black;
    border-radius: 0;
    width: 0.8rem;
    height: 100%;
    background: transparent;
}

/* Prevents the long bug report output from overflowing the modal width. */
#bug-report-output {
    min-width: 100%;
    width: 0;
    resize: none;
    font-family: monospace;
    font-size: 1.3rem;
}

.bug-report-out-explanation {
    margin-top: 0.75em;
}

#bug-report-status {
    padding-bottom: 0.5em;
    font-size: 110%;
}

#bug-report-modal .modal-dialog-surface,
#player-tags-modal .modal-dialog-surface {
    overflow-y: auto;
    overflow-x: hidden;
}

.modal a {
    color: hsla(207, 56%, 37%, 1);
}

.modal a:hover {
    color: hsla(207, 56%, 28%, 1);
}

#usage-reporting-modal ul {
    padding-left: 2rem;
}

#help-modal .modal-body {
    overflow-y: auto;
}

.help-page h2 {
    margin-top: 0px;
}

.faq-question {
    margin-top: 1rem;
}

.faq-answer {
    font-size: 85%;
}

.faq-answer ul li {
    text-align: left;
}

.faq-poker-hands-infographic {
    width: 100%;
}

.background-option {
    background-size: 100% 100%;
    width: 24rem;
    height: 18rem;

    padding: 0.5rem;
    border: 0.3rem solid #111111;
    border-radius: 0.3rem;

    margin: 0.5rem;
    vertical-align: top;

    transition-property: border-color;
    transition-duration: 0.5s;

    display: inline-flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
}

.background-option .background-info {
    padding: 0.2rem 0.5rem;
    text-align: center;

    border: 0.15rem solid #111111;
    border-radius: 0.5rem;

    background-color: #FFFFFF;
    opacity: 0.50;

    font-size: 1.25rem;

    transition-property: opacity;
    transition-duration: 0.5s;
}

.background-option .background-title {
    font-weight: bold;
    font-size: 1.4rem;
}

.background-option .background-author::before {
    content: "by: ";
}

.background-option:hover,
.background-option:active {
    border-color: #FFFFFF;
}

.background-option:hover .background-info,
.background-option:active .background-info {
    opacity: 1.0;
}

.background-credits-container {
    text-align: left;
}

#io-modal .modal-content {
    overflow-y: auto;
    max-height: 75vh;
}

.import-error {
    font-size: 125%;
    margin-bottom: 2%;
    color: firebrick;
}

.options-container {
    overflow-y: auto;
    max-height: 45rem;
}

/************************************************************
 * Classes for the dialogue transcript modal.
 ************************************************************/
#log-container {
    width: 100%;
    overflow-y: scroll;
    max-height: 40rem;
}

.log-entry-container {
    border: 0.2rem solid #111111;
    border-radius: 0.5rem;
    background: #F5F5F5;
    display: flex;
    align-items: center;
    margin-bottom: .5%;
    opacity: .75;
    cursor: pointer;
}

.log-entry-container:hover {
    opacity: 1;
}

.log-entry-label {
    float: left;
    margin-left: .25em;
    width: 12.5%;
    height: 100%;
}

.log-entry-text {
    float: left;
    margin-left: .5em;
    width: 87.5%;
    height: 100%;
    text-align: left;
}


.log-entry-message {
    width: 100%;
    height: 100%;
}

/************************************************************
 * Classes for the changelog / version modal.
 ************************************************************/

#version-modal .modal-body {
    max-height: 50vh;
    overflow-y: scroll;
}

.changelog-version-label {
    width: 10%;
    padding-bottom: 1.5%
}

.changelog-date-label {
    width: 15%;
    padding-bottom: 1.5%
}

.changelog-entry-text {
    width: 75%;
    padding-bottom: 1.5%
}

/************************************************************
 * Classes for the resort modal.
 ************************************************************/

#resort-modal .modal-footer {
    margin-top: 2rem;
}

#resort-modal .resort-link-button {
    padding: 0.75rem;
    font-size: 2rem;
    color: black;

    margin-bottom: 1rem;
}
/* ... */

